[package]
name = "qrusthy"
version = "0.1.0"
authors = ["Emaad Paracha <emaad@emaadparacha.com>"]
edition = "2018"
description = "Rust wrapper for the QHYCCD SDK for QHY Cameras"
repository = "https://github.com/emaadparacha/qrusthy"
readme = "README.md"
license = "MIT"
keywords = ["qhy", "qhyccd", "ccd", "camera", "qhy-wrapper"]
categories = ["api-bindings", "hardware-support"]

include = [
    "examples/*",
]

[dependencies]
fitsio = "0.19.0"
